--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,9 @@
   -->
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
+  <script src="bower_components/auth0-lock/build/auth0-lock.min.js"></script>
+  <script src="bower_components/auth0.js/build/auth0.min.js"></script>
+  <script src="bower_components/auth0-angular/build/auth0-angular.min.js"></script>
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
