Trying apple-mobile-web-capable meta-tag

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
   <title>Tallahassee Trailblazers | TRAIL_NAME_HERE</title>
   <meta name="description" content="Trailblazers Trail - TRAIL_NAME_HERE">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="apple-mobile-web-app-capable" content="yes" />
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="bower_components/angular-input-stars/angular-input-stars.css">
