Google maps basically working

--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
   <script> API_BASE_URL = 'http://tallytrailblazers.com:3000'; </script>
+  <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/a0-angular-storage/dist/angular-storage.min.js"></script>
@@ -37,6 +38,9 @@
   <script src="bower_components/auth0.js/build/auth0.min.js"></script>
   <script src="bower_components/auth0-angular/build/auth0-angular.min.js"></script>
   <script src="bower_components/angular-input-stars/angular-input-stars.js"></script>
+  <script src='bower_components/lodash/dist/lodash.min.js'></script>
+  <script src='bower_components/angular-simple-logger/dist/angular-simple-logger.min.js'></script>
+  <script src='bower_components/angular-google-maps/dist/angular-google-maps.min.js'></script>
   <script src="app.js"></script>
   <script src="trailpage/trailpage.js"></script>
   <script src="components/version/version.js"></script>
