Create a new server-side activity via API

--- a/app/trailpage/trailpage.html
+++ b/app/trailpage/trailpage.html
@@ -72,17 +72,17 @@
 
                 <div class="col-xs-4 tblaze-finger-button">
                     <span>Hike It</span>
-                    <button class="btn btn-primary" ng-click="startActivity('hike')"><img src="/img/activity_hike.png"></button>
+                    <button class="btn btn-primary" ng-click="startActivity('hiking')"><img src="/img/activity_hike.png"></button>
                 </div>
 
                 <div class="col-xs-4 tblaze-finger-button">
                     <span>Bike It</span>
-                    <button class="btn btn-primary" ng-click="startActivity('bike')"><img src="/img/activity_bike.png"></button>
+                    <button class="btn btn-primary" ng-click="startActivity('biking')"><img src="/img/activity_bike.png"></button>
                 </div>
 
                 <div class="col-xs-4 tblaze-finger-button">
                     <span>Run It</span>
-                    <button class="btn btn-primary" ng-click="startActivity('run')"><img src="/img/activity_run.png"></button>
+                    <button class="btn btn-primary" ng-click="startActivity('running')"><img src="/img/activity_run.png"></button>
                 </div>
             </div>
         </div>
