Favicon and tweaking the front-end text

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,10 @@
   <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="bower_components/angular-input-stars/angular-input-stars.css">
   <link rel="stylesheet" href="app.css">
+
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
