Fixed language on front page

--- a/app/trailpage/trailpage.html
+++ b/app/trailpage/trailpage.html
@@ -61,7 +61,7 @@
         <div ng-if="authenticated">
 
             <p>
-                Explain the benefit to the user for logging in here.
+                Click a button below to get started on the trail.
             </p>
 
             <div class="tblaze-trail-action row">
