--- a/app/trailpage/trailpage.html
+++ b/app/trailpage/trailpage.html
@@ -61,24 +61,21 @@
         <div ng-if="authenticated">
 
             <p>
-                Click a button below to get started on the trail.
+               Why are you here?
             </p>
 
             <div class="tblaze-trail-action row">
 
                 <div class="col-xs-4 tblaze-finger-button">
-                    <span>Hike It</span>
-                    <button class="btn btn-primary" ng-click="startActivity('hiking')"><img src="/img/activity_hike.png"></button>
+                    <button class="btn btn-success" ng-click="startActivity('hiking')"><img src="/img/activity_hike.png"></button>
                 </div>
 
                 <div class="col-xs-4 tblaze-finger-button">
-                    <span>Bike It</span>
-                    <button class="btn btn-primary" ng-click="startActivity('biking')"><img src="/img/activity_bike.png"></button>
+                    <button class="btn btn-success" ng-click="startActivity('biking')"><img src="/img/activity_bike.png"></button>
                 </div>
 
                 <div class="col-xs-4 tblaze-finger-button">
-                    <span>Run It</span>
-                    <button class="btn btn-primary" ng-click="startActivity('running')"><img src="/img/activity_run.png"></button>
+                    <button class="btn btn-success" ng-click="startActivity('running')"><img src="/img/activity_run.png"></button>
                 </div>
             </div>
         </div>
