--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,8 @@
   <meta charset="utf-8">
   <base href="/">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Tallahassee Trailblazers | TRAIL_NAME_HERE</title>
-  <meta name="description" content="Trailblazers Trail - TRAIL_NAME_HERE">
+  <title>Tallahassee Trailblazers</title>
+  <meta name="description" content="Trailblazers Trail">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
