--- a/app/trailpage/trailpage.html
+++ b/app/trailpage/trailpage.html
@@ -27,7 +27,7 @@
         <div class="row" style="margin-bottom: 1em;">
             <div class="col col-xs-12 tblaze-trail-stats">
                 <span class="tblaze-trail-stats-length">
-                    {{ trail.trailLen | extract_miles }}<small title="miles">mi</small> - <span class="tblaze-difficulty-{{ trail.difficulty }}">{{ trail.difficulty | capitalize }} trail</span>
+                    {{ trail.trailLen | extract_miles }}<small title="miles">mi</small> - <span class="tblaze-difficulty-{{ trail.difficulty }}">{{ trail.difficulty | capitalize }} Trail</span>
                 </span>
             </div>
         </div>
