--- a/app/trailpage/trailpage.html
+++ b/app/trailpage/trailpage.html
@@ -47,8 +47,7 @@
         <div ng-if=" ! authenticated">
 
             <p>
-                Leave your mark, and log your trail visit!
-                Login with Facebook or STRAVA to get started.
+                Login to connect, track your visits, and leave feedback!
             </p>
 
             <div class="tblaze-trail-action">
