Fixed front page styles for smaller phones.

--- a/app/trailpage/trailpage.html
+++ b/app/trailpage/trailpage.html
@@ -25,7 +25,7 @@
         </header>
 
         <div class="tblaze-vertical-center-offset-10">
-            <div class="row" style="margin-bottom: 1em;">
+            <div class="row" style="margin-bottom: 0.5em;">
                 <div class="col col-xs-12 tblaze-trail-stats">
                     <span class="tblaze-trail-stats-length">
                         {{ trail.trailLen | extract_miles }}<small title="miles">mi</small> - <span class="tblaze-difficulty-{{ trail.difficulty }}">{{ trail.difficulty | capitalize }} Trail</span>
@@ -33,7 +33,7 @@
                 </div>
             </div>
 
-            <div class="row" style="margin-bottom: 1em;">
+            <div class="row">
                 <div class="col col-xs-12 tblaze-trail-weather">
                     <span class="tblaze-trail-weather-value">
                         <span class="tblaze-trail-weather-temp">
