--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
-  <script> API_BASE_URL = 'https://backend-lb-1063556033.us-east-1.elb.amazonaws.com'; </script>
+  <script> API_BASE_URL = 'https://tallytrailblazers.com:8443'; </script>
   <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
